<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="songDetails"
            type="com.example.musicplayer.song.Song" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="32dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:text="@string/song_details"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="24sp"
            tools:ignore="RtlSymmetry" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#888" />

        <LinearLayout
            android:layout_marginVertical="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/title"
                style="@style/gray_text_style"/>
            <TextView
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={songDetails.title}"
                style="@style/black_text_style"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#888" />

        <LinearLayout
            android:layout_marginVertical="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/artist"
                style="@style/gray_text_style"/>
            <TextView
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={songDetails.artist}"
                style="@style/black_text_style"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#888" />

        <LinearLayout
            android:layout_marginVertical="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/album"
                style="@style/gray_text_style"/>
            <TextView
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={songDetails.album}"
                style="@style/black_text_style"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#888" />

        <LinearLayout
            android:layout_marginVertical="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/year"
                style="@style/gray_text_style"/>
            <TextView
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={songDetails.year}"
                style="@style/black_text_style"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#888" />

        <LinearLayout
            android:layout_marginVertical="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/genre"
                style="@style/gray_text_style"/>
            <TextView
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={songDetails.genre}"
                style="@style/black_text_style"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#888" />

        <LinearLayout
            android:layout_marginVertical="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/bitrate"
                style="@style/gray_text_style"/>
            <TextView
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={songDetails.bitRate}"
                style="@style/black_text_style"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#888" />

    </LinearLayout>
</layout>